fix text overflow issues due to new font

--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ body {
 }
 .movie-card .movie-card-overlay p {
   display: -webkit-box;
-  -webkit-line-clamp: 12;
+  -webkit-line-clamp: 11;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
   max-height: 100%;
-  height: 95%;
+  height: 90%;
   width: 90%;
   margin: 0;
   margin: 0.5rem;
